--- a/harperdb.html
+++ b/harperdb.html
@@ -24,7 +24,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('harperdb setup', {
         category: 'config',
-        color: "#D8BFD8",
+        color: "#AEA9F8",
         defaults: {
             hostname: {value: "127.0.0.1", required: true},
             port: {value: 9925, required: true},
@@ -179,7 +179,7 @@
 
     RED.nodes.registerType('harperdb', {
         category: 'storage',
-        color: "",
+        color: "#AEA9F8",
         defaults: {
             harperdb: {type: "harperdb setup", required: true},
             name: {value: ""},
