--- a/harperdb.html
+++ b/harperdb.html
@@ -194,7 +194,7 @@
         },
         inputs: 1,
         outputs: 1,
-        icon: "db.png",
+        icon: "dog.png",
         align: "right",
         label: function () {
             var harperdbNode = RED.nodes.node(this.harperdb);
