fix wrong fields on sql operation
This closes #4

--- a/harperdb.html
+++ b/harperdb.html
@@ -54,7 +54,7 @@
             <option value="delete" >delete</option>
             <option value="search_by_hash" >search_by_hash</option>
             <option value="search_by_value" >search_by_value</option>
-              <option value="search_by_value" >sql</option>
+              <option value="sql" >sql</option>
 
         </select>
     </div>
@@ -169,7 +169,6 @@
                 $(".node-input-hash_values").hide();
 
             }
-
             else {
                 $(".node-input-hash_attribute, .node-input-hash_values,  .node-input-search_value,.node-input-search_attribute,.node-input-get_attributes").hide();
             }
