--- a/harperdb.html
+++ b/harperdb.html
@@ -58,6 +58,10 @@
 
         </select>
     </div>
+    <div class="form-row node-input-name">
+        <label for="node-input-name"><i class="fa fa-tag"></i>  Name </span></label>
+        <input type="text" id="node-input-name">
+    </div>
      <div class="form-row node-input-schema">
         <label for="node-input-schema"><i class="fa fa-database"></i>  schema</span></label>
         <input type="text" id="node-input-schema">
@@ -109,6 +113,7 @@
         <label for="node-input-get_attributes"><i class="fa fa-columns"></i>  get_attributes </span></label>
         <input type="text" id="node-input-get_attributes">
     </div>
+
     <div class="form-tips" id="node-warning" style="display: none"><span data-i18n="[html]harperdb.tip"></span></div>
 
 </script>
