--- a/harperdb.html
+++ b/harperdb.html
@@ -27,7 +27,7 @@
         color: "#AEA9F8",
         defaults: {
             hostname: {value: "127.0.0.1", required: true},
-            port: {value: 9925, required: true},
+            port: {value: 9925, required: false},
             name: {value: ""}
         },
         credentials: {
